I ensured each page has a clear heading structure, sufficient color contrast, and more meaningful link text.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,12 @@ p {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+    font-family: arial;
+    font-size: large;
+}
+
 h3 {
     text-align: center;
     font-family: arial;
@@ -57,6 +63,8 @@ li {
 /*this is the css for page 2*/
 #head2 {
     font-size: 45px;
+    text-align: center;
+    font-family: arial;
 }
 
 #return {
@@ -81,8 +89,8 @@ li {
     color: blue;
 }
 
-.gold {
-    color: rgb(209, 178, 5);
+.navy {
+    color: rgb(0, 34, 68);
     font-weight: bolder;
 }
 
